<resources>
    <string name="app_name">KintexCheck</string>
    <string name="loading">loading</string>
    <string name="AutomaticTesting">AutomaticTesting</string>
    <string name="Connection">Connection</string>
    <string name="SimReader">SimReader</string>
    <string name="WiFi">WiFi</string>
    <string name="GPS">GPS</string>
    <string name="Passed">Passed</string>
    <string name="Failed">Failed</string>
    <string name="Bluetooth">BlueTooth</string>
    <string name="Gyroscope">Gyroscope</string>
    <string name="Barometer">Barometer</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="NFC">NFC</string>
    <string name="Magnetomeyer">Magnetometer</string>
    <string name="Sensor">Sensor</string>
    <string name="Secure">Secure</string>
    <string name="FingerprintSensor">Fingerprint Sensor</string>
    <string name="FaceID">Face ID</string>
    <string name="ManualTest">Manual Test</string>
    <string name="ScreenTest">Screen Test</string>
    <string name="Display">Display</string>
    <string name="TouchPanel">Touch Panel</string>
    <string name="ThreeDTouch">3D Touch</string>
    <string name="TrueTone">True Tone</string>
    <string name="MultiTouch">Multi Touch</string>
    <string name="ProximitySensor">Proximity Sensor</string>
    <string name="LightSensor">LightSensor</string>
    <string name="Button">Button</string>
    <string name="PowerButton">Power Button</string>
    <string name="HomeButton">Home Button</string>
    <string name="VolumeDownButton">Volume Down Button</string>
    <string name="VolumeUpButton">Volume Up Button</string>
    <string name="SilenceButton">Silence Button</string>
    <string name="Vibrate">Vibration</string>
    <string name="CameraTest">Camera Test</string>
    <string name="TrueDepthCamera">True Depth Camera</string>
    <string name="FrontCamera">Front Camera</string>
    <string name="RearCamera">Rear Camera</string>
    <string name="Flash">Flash</string>
    <string name="WideCamera">Wide Camera</string>
    <string name="TelephotoCamera">Telephoto Camera</string>
    <string name="AudioTest">Audio Test</string>
    <string name="LoudSpeaker">Loud Speaker</string>
    <string name="EarSpeaker">Ear Speaker</string>
    <string name="BottomMicrophone">Bottom Microphone</string>
    <string name="VideoMicrophone">Video Microphone</string>
    <string name="FrontMicrophone">Front Microphone</string>
    <string name="SemiAutomatic">Semi-Automatic</string>
    <string name="Battery">Battery</string>
    <string name="USBCharge">USB Charge</string>
    <string name="WirelessCharge">Wireless Charge</string>
    <string name="Headset">Headset</string>
    <string name="HeadsetLeft">Headset-Left</string>
    <string name="HeadsetRight">Headset-Right</string>
    <string name="HeadsetPort">Headset-Port</string>
    <string name="ManualCheck">Manual Check</string>
    <string name="Cosmetics">Cosmetics</string>
    <string name="LCDQuality">LCD Quality</string>
    <string name="FrameQuality">Frame Quality</string>
    <string name="BackQuality">Back Quality</string>
    <string name="FTQuality">FT Quality</string>
    <string name="Notes">Notes</string>
    <string name="LCDgap">LCD gap</string>
    <string name="Cutthehand">Cut the hand</string>
    <string name="TouchPlay">Play</string>
    <string name="TouchRecode">Touch Recode</string>
    <string name="UnTest">unTest</string>
    <string name="Testing">Testing...</string>
    <string name="silent">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="ring">Ring</string>
</resources>
